// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1a4022d88c4664",
  "0042864d705045",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "0470c6d84e3c67",
  "07ec87883d8303",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1152ee5e00a9c5",
  "0fcd003aa134fd",
  "0a7bc7a19c196d",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "177af8ff308856",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "1297ba12699dd7",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "090002547a9be0",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "03e1fd9833de0b",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "0270a2bfaf05bf",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "173fd30a5534b1",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "1e0c9dae21c114",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "0747a646561ee9",
  "0e4db3569f7cc6",
  "0033c969cdb65f",
  "1e2c800c7488d4",
  "151a4865e792cc",
  "0e6b7596b44e8f",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "04cd3cdbc9ff33",
  "033ca8dc6b9aef",
  "1a4f8db291bb10",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "00fd4a639091ab",
  "1e177cfec9272e",
  "0c899f8d401940",
  "072006f3087ef9",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "0468c69bc0a9ad",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "05c2f4bf09ac38",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "1bc92e2652560a",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "10761e7f06747a",
  "12c61b266472ac",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "0004c8f44c8226",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "09d5afcf41f056",
  "09476badc63922",
  "0c9a478b190f14",
  "173ceaf89bc57c",
  "183e6fa57f13e3",
  "0c2b86db737d53",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "081b9986e438a0",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "1db89cfed42bed",
  "13a023cb7733af",
  "0191962f157852",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "0e60bf400f1771",
  "1c862913173a2f",
  "1fbef160ba5563",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "14b265b13b0a70",
  "123ae2de91cb0f",
  "1e58d3b5e46062",
  "0c280608473dc1",
  "131db521b32dd4",
  "0f108d6b7b6fd0",
  "14b7af2ac46b47",
  "18ab0fcaec7f21",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1308626d4251de",
  "07a1db3c4483e2",
  "146fcb9d61e9eb",
  "1eabfe9a425031",
  "0c283441650d8b",
  "16e29531272f46",
  "005cae0faba801",
  "0c8ae9c781bddf",
  "16b9becbe1ea5c",
  "0d76a9dce25b89",
  "1fd1cb52908921",
  "1dd996b5b3efbc",
  "0cb2c1a6a3dbcd",
  "1aa2389f602570",
  "16049bfcbb4eec",
  "085f4be779a84e",
  "05f389c2ee6043",
  "1e1417fd446fc8",
  "0027008fe2faf9",
  "0a4089c1d1ba93",
  "179c5355e4c03d",
  "0e27afeb62b671",
  "0ce119b6d57e26",
  "03ac9e8edeae20",
  "099a09697da63b",
  "0523478561b1df",
  "133da274a7621e",
  "00162d4483f1dc",
  "1f4030d67d1788",
  "022fb5d34a0fb8",
  "0f1f40c76a4fab",
  "069fc7f4dedca9",
  "096e6982b8f7d3",
  "07be242ed4cb4d",
  "1ae5930d30459b",
  "10f628064424da",
  "126afb0c3d108d",
  "070e532f4398be",
  "1e7cb2ea1d7aea",
  "1c92786d67a90b",
  "0042c8b0dbc7cc",
  "1c72c39f710bbb",
  "03c40c6671517a",
  "0ddc2239f8fed6",
  "18bef1a34fb32a",
  "199cad4b2fa210",
  "0c6f4618157976",
  "12cf42450d553b",
  "1b76eda138d077",
  "0dc691b5884bcd",
  "00dd768f806c1d",
  "08901db71f5cfc",
  "1313eec92d401f",
  "00aadee3d78d2e",
  "1da704f12ce7c1",
  "0e952a08a2c1bd",
  "154ec6e158f8ba",
  "0321dc4a266040",
  "123c934e613fdc",
  "1fd36a7cc18f69",
  "0b79d7bf7358c6",
  "1023b3b09d5e11",
  "1994f81e8636f1",
  "0daf49ecf7d2df",
  "1e9587cdd6bdd7",
  "1e284ca4a3423d",
  "0405f5b9a5e251",
  "00b44075614ccd",
  "169837d4e18ac5",
  "1952691be0cc07",
  "1fc5e3fcf790be",
  "0ff7536f9e8b37",
  "1c08b7e7ed8498",
  "08ea8752ade1ef",
  "03795e6ced827d",
  "10f69552f3d803",
  "19da0472814bae",
  "151d0d2f1d059c",
  "1b19c8171569ca",
  "0aa72f6a26db7e",
  "1a3f85850ae4a4",
  "1f40e98c36c377",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "0f2f1fdf3dcc9e",
  "1c574559d2cf70",
  "031a3cfe22700c",
  "14ee78f7b90108",
  "1dcb3d1fbfb74e",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "1417d1979976a8",
  "155fcaeed56be6",
  "06be3a6c6469b0",
  "0636c5e8f576a7",
  "101139cfc40652",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12e936fb87b7f6",
  "01ec0a1495fc3c",
  "0a3746b37d315c",
  "1b8f42fb0713fa",
  "14972aa3f06acf",
  "08050f7f6495ec",
  "181881f41a999c",
  "0883dac6baf369",
  "1b956175dadb93",
  "0791ce03e105c0",
  "0a67661fb354ec",
  "0c7c7891d675ab",
  "1742bda58ecf6e",
  "1f56b7ee8add7f",
  "07a38e203a54cd",
  "0707016f48df58",
  "19e6811a37b2d9",
  "0cb3b7860b1412",
  "0029a30b8c20de",
  "0ee17919795053",
  "0ea1865633d000",
  "16f9c0480b903d",
  "0cf1974c943a26",
  "1202dab3f24394",
  "04d04a27b070ef",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "149480a4a0ccef",
  "18c189019061ed",
  "082ebf4885d6c2",
  "15ee51a0703be5",
  "0e70319671fa71",
  "0e66012806bf98",
  "18c5f156a6c9df",
  "0ac8c1376d43c2",
  "04845edec85c5a",
  "1b96809b9c33df",
  "1eb63c3794de81",
  "10746fe417edad",
  "06e511b5f90142",
  "145b5951ae2735",
  "17f8e68d7e782c",
  "1b2fdec999b972",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "11fa9a34cc2b48",
  "1fd4756d3ce9bb",
  "18b32b3bcc255a",
  "04a0c9d9b114d7",
  "1c3a064089f63e",
  "0c225c0a6d0413",
  "133ead5c70bdee",
  "0e3a8338836748",
  "1a870e0e2168f0",
  "0f759e38ed072c",
  "1c1d4048ddd442",
  "088c164e3875f4",
  "19008235c949ab",
  "19dd2a8a0f06d3",
  "00247d6b2f38b1",
  "18615081f8d847",
  "06e422c9bef7c8",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "11146165f156ec",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "12b4b6a360d105",
  "108e9094e71276",
  "01b2af492c9815",
  "164acfadc229d3",
  "11145337e30c4a",
  "15db8bbe7c3eee",
  "084370b86a6756",
  "19c94adc45f7b1",
  "1ba552dc52f04e",
  "1007030e00fdc4",
  "13a7b1a81f49c6",
  "1346e45d92f87e",
  "0a9b5966fde713",
  "07f67bff9f3218",
  "060ad6cb28112f",
  "1bf637b4f53baf",
  "11b2c25f5b857c",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1a4022d88c4664",
  "123ae2de91cb0f",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1fd1cb52908921",
  "0fcd003aa134fd",
  "0cb2c1a6a3dbcd",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "0027008fe2faf9",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "133da274a7621e",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "07be242ed4cb4d",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "1e7cb2ea1d7aea",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "1b76eda138d077",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "0321dc4a266040",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "00b44075614ccd",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "1a3f85850ae4a4",
  "0e4db3569f7cc6",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "033ca8dc6b9aef",
  "155fcaeed56be6",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "14972aa3f06acf",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "0707016f48df58",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "0ea1865633d000",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "082ebf4885d6c2",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "145b5951ae2735",
  "09476badc63922",
  "0c9a478b190f14",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "18b32b3bcc255a",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "01b2af492c9815",
  "1c862913173a2f",
  "11145337e30c4a",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "007888065a6c69",
  "1b50ab73485c41",
  "01a1135ee6cf2b",
  "00b53c1106797d",
  "0dc4376245f7bf",
  "1810d100e4271f",
  "0e9499b5b91522",
  "058ba98fa64a0a",
  "03ed3055bd69da",
  "1fe5c87b48e1bd",
  "1858b60475d5bd",
  "1b541a7d59e78e",
  "00b93b041718a4",
  "0b5d3ed6f0d1d1",
  "149d099e1c262c",
  "17500a349f7a3a",
  "1f80c240c45dd1",
  "020c617b35f3e4",
  "1a039368e3118f",
  "01853d8730a2a8",
  "13bdf7c0282b83",
  "1a651398f442b0",
  "1b0318d7fb2ddb",
  "0e88af0e1f9684",
  "19050ddac067e8",
  "07f28b853f2a63",
  "1b039ad306b80b",
  "16d6a050cd70c1",
  "040d4b7ffccad1",
  "11a4720e10123a",
  "14d46415d485c7",
  "1cd3f50db37cac",
  "130f6713f6378a",
  "0278a232db0179",
  "0d340ae7e13cf8",
  "04e34b322fcdc8",
  "183eb632dc3ae6",
  "1dcd8ae5fd5bc3",
  "03c7b20faf83a2",
  "16e5313b916fe5",
  "04dca5b4b5fe56",
  "0ea864126b6632",
  "1a2f30cc80d9a4",
  "011b14a11f8f09",
  "1f04f5b5bdf418",
  "00792e6246865b",
  "0e5e6ad1063b88",
  "02db0bbcb98265",
  "15a8bdd309dc4c",
  "0fc1ed6b07a916",
  "1a62e792c82137",
  "1390b2d2577d57",
  "0bec616d8cc43d",
  "1dc2d85d958bee",
  "0d262472bd806c",
  "14ca620d581ef1",
  "138bbe51c6943d",
  "0fdee46b423b4f",
  "19b600530cf10b",
  "0db352e2d96a43",
  "1ca3b15de2ddca",
  "1821e031fb255d",
  "1d4a69ccb71c57",
  "0bbb44f762a161",
  "06dde8605db79c",
  "01d4a35a6aecef",
  "11fe4f7ab6cb65",
  "125850fe1a060c",
  "00c7b73a13d6dd",
  "1fca25ae88f698",
  "05947fad50d291",
  "1dec5c9732c074",
  "010f403d8f12d4",
  "0a6e01c71a5977",
  "15664ae31bef0a",
  "0199bfbf94af92",
  "18f4c8501534bc",
  "1da0e88e7de129",
  "1fea037f16e289",
  "0f353fd65b2946",
  "1bb442bd5ec99b",
  "1f424042126cb7",
  "00a9cb400c1dbc",
  "109acc1357600d",
  "055cd54be56e13",
  "07796e8f46a69d",
  "0046d93e3102b7",
  "1c2d2d22c654b8",
  "1e0cacd376c5c0",
  "15dcde19c7b1e5",
  "001b31bdcd294e",
  "1d8bba6300f33e",
  "046c23dcba92bf",
  "029d9b70cb57f4",
  "194be5fdc6a242",
  "05416aea7f910e",
  "08d2b8438a3a77",
  "0bbdcf6fe802cb",
  "003b3f3fe50f23",
  "155f371315febc",
  "18ba945881dc27",
  "1f98cc1d9af9ac",
  "1021fef761c50b",
  "06bb8a720d56a9",
  "068401ffc74f9d",
  "137e9618827121",
  "17fcb9f691c86c",
  "16e4c35827e8c9",
  "14731d57637ccd",
  "049880d9445283",
  "1e67f08ff57a7d",
  "0fa5478dc7897f",
  "1e7f8fc9042a64",
  "123838d86c4d26",
  "03e3630574a307",
  "0c93535c5b9400",
  "11debe6f1b32ad",
  "1cdd4c18068fea",
  "010990da31093a",
  "157200ce6f6780",
  "19bb7cfd8168e8",
  "136d42e506ae40",
  "0acf607cc1fc53",
  "1335a1b05708b5",
  "120616b63e336a",
  "178beca3a4184e",
  "1aa3393b71df4d",
  "0f8d10b7a44573",
  "0e5180662a4fd9",
  "071b239363979b",
  "0b6f992e6aea5a",
  "16e07649fd1149",
  "064b7d788b06d5",
  "0970912cadfa25",
  "0b700aa3cc950d",
  "1832573acb5e3a",
  "084811fd340662",
  "0dc7bf0a11d1e5",
  "1d5a919fc4bfc1",
  "03499100410a77",
  "1e72911d4d72d0",
  "1f0aa815690a2b",
  "0a1664372d5768",
  "103cdb8a2a942b",
  "1c21a4d340ce39",
  "1d6aaf77838e61",
  "037f731d280bd0",
  "13c1333272690c",
  "01cfee41978ddc",
  "148428b1731bc1",
  "10ad40938f5cd8",
  "08f74562c2ee51",
  "14fcf137b96c23",
  "021dc50f2f17ff",
  "0a83fcc77c0ab2",
  "105b37c5c204e7",
  "058d51fff47b95",
  "1a864e6acf5e75",
  "0349e56cb9cd9b",
  "013c2e2c12a699",
  "03f0ec694cd5c1",
  "08b97128e8b210",
  "02d97dcf02c996",
  "1440fbb9f9c233",
  "14089fea381d60",
  "1f7816edc3ee97",
  "09a02496491520",
  "187a3ec181daf1",
  "0dddddc1d39ce6",
  "1a04d834f0e6ed",
  "13db925ad9da0f",
  "0a45dc5319fffc",
  "0e4759bbb098f1",
  "183f70d7f90548",
  "1525210d740287",
  "04c3b83a2316d8",
  "014f05b41ecba8",
  "09e7005493fef5",
  "181c823156b780",
  "06ff504ebe78a9",
  "1229b14222f521",
  "0665132514fd4a",
  "1770423d03421c",
  "061ab868940f61",
  "0b4cfdeafb1ff8",
  "1f18ea90ca9803",
  "11132931fab464",
  "124630a0c63535",
  "1fa30fb0fbfc73",
  "185b946d6667c8",
  "0615b948a32d94",
  "12844383ec6bf5",
  "1cc5a53bfcdc4f",
  "143068eb937523",
  "01463050f59899",
  "0e9a47979534bd",
  "1adcf867317c89",
  "10f616f4b24191",
  "15036935e921ad",
  "1b4aa20df8f4fc",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "0c404534faa95c",
  "06c73ebcdb5069",
  "0d46fdda36fcc7",
  "1c36266ff4df89",
  "1421ffb42c68c9",
  "1c38a2ee59b096",
  "0e9499b5b91522",
  "1cd1523fe91f58",
  "03ed3055bd69da",
  "1a2b8aac9c3ef8",
  "1dd70561586fa4",
  "077f6bbd1c5e1a",
  "1f657e81dcf2aa",
  "1afe12f3b48c97",
  "0d67a354e3539c",
  "1f88ab35af4278",
  "1f80c240c45dd1",
  "100d1b6daf9e01",
  "0442e98df69918",
  "1881acb007b2c3",
  "13e64fd3d9666d",
  "0b680b530d1eeb",
  "0125633ebed059",
  "1329a68ee47e20",
  "10237676d50bd3",
  "1d056098ecd7f0",
  "1ce0d061edf687",
  "09f9532749e295",
  "0004cca5b8350e",
  "0baf840a2125a4",
  "1550928ac58f8e",
  "00c3a8deaf2b5d",
  "0e358ed0059840",
  "1811284ccb2c4f",
  "11bfcb06b760c9",
  "04e34b322fcdc8",
  "0b9e7aba101d90",
  "1917eccdfc21b4",
  "19e9c09beb013d",
  "0e4dabf58e3449",
  "199aef26dd56db",
  "08e90c5586eb8c",
  "0c927f88e36a62",
  "0382704bb77a66",
  "19da289b2d6af0",
  "013102a7173478",
  "0e50b10fc50cb5",
  "02db0bbcb98265",
  "1d1d7d5b1cbbdd",
  "1ec6c1e40eec37",
  "0993e2d9731bfb",
  "1390b2d2577d57",
  "05ef4ee8eeea53",
  "1dc2d85d958bee",
  "1a89c985d4ca7d",
  "174dc487ea91fa",
  "17a8e73162f655",
  "0fdee46b423b4f",
  "084eb7f1952035",
  "04214d18925180",
  "04da4584898cf8",
  "19a5983c4ac86f",
  "1a59f6b42e5903",
  "0bbb44f762a161",
  "0029430ab248c2",
  "01d4a35a6aecef",
  "0138070f2344f1",
  "11a7d77cda322c",
  "1771cbfaa944e8",
  "0b1d2650130cbf",
  "1f345c77914ca5",
  "14a6bc28924a17",
  "1e0a814c46778c",
  "149acbfbb0c3f7",
  "1d5c7d7039d840",
  "12666ef88317ab",
  "12dd87c9b812c8",
  "058544e1fbd3e5",
  "125817019bbc62",
  "1dc21c341c8956",
  "1eeafa819d9153",
  "1f424042126cb7",
  "05cb1d03a3e23a",
  "108d6f490a1468",
  "080893e86a8d6e",
  "06c1b6b5681d5e",
  "0871f51a3c0b05",
  "104e348696e50b",
  "1b06d0caeb73ca",
  "06d7c11d4e3024",
  "0a05f64911034e",
  "016926a2b77025",
  "0d3b85d9b75bc0",
  "12247dadb7c574",
  "1274ce9edf0115",
  "085969cb262676",
  "0753c53356268b",
  "0e9b16a02de1b8",
  "003b3f3fe50f23",
  "1d32ae77deb7de",
  "0b964c953f17c3",
  "1e19b76d800911",
  "1021fef761c50b",
  "0c1f838c480d1c",
  "04d6bc7b26011e",
  "022800e1473e70",
  "0268d7f0dafe95",
  "03611190f65d94",
  "11979b53d6fea4",
  "0ce3582f8994b3",
  "0ab58ef18b7c4e",
  "0fa5478dc7897f",
  "0d3ab85ca9969c",
  "0621eab24a259d",
  "161b98ddc086f0",
  "0666cfa595f695",
  "1e2a231e3da026",
  "179a95540735ca",
  "125594a743996a",
  "0012ffd5a6401d",
  "19bb7cfd8168e8",
  "0c9505bbc5e4e2",
  "0acf607cc1fc53",
  "12f40ef08107cc",
  "0cc7cfae855781",
  "1eaa2e8cf0ff07",
  "0c5387775199f1",
  "1897fe2cf395b9",
  "015193dd737374",
  "071b239363979b",
  "163a349dacf3ed",
  "0e03d598e5039f",
  "135677df396080",
  "1a838491af9f37",
  "01a89b5deae43a",
  "1832573acb5e3a",
  "060eeaa9d46c0d",
  "0613f560617d2a",
  "17bb26617e053b",
  "015bbae1e2337b",
  "1e72911d4d72d0",
  "0d5bad6c90ff93",
  "0a1664372d5768",
  "186db3586d445a",
  "081e30819e6038",
  "02e1dacbb59e55",
  "037f731d280bd0",
  "0b3e97a9db469a",
  "02edfeedbc0556",
  "09014c9469f8dd",
  "03ef5b70227733",
  "06e35c06dfaea5",
  "1dfd080cd0d89a",
  "02571cd8cb781e",
  "028323e5db241f",
  "136e55bd18800a",
  "10f15ca29680ed",
  "0343cd08c5d803",
  "152e6328b17dc0",
  "0de8e431b03d92",
  "161708b2481173",
  "19d0792440c014",
  "1a2192ec0a64ae",
  "106399d09aaef3",
  "14089fea381d60",
  "1fca255c059488",
  "09a02496491520",
  "05646700f54d31",
  "17a61a9d7a14be",
  "01cb35e4133a7f",
  "13db925ad9da0f",
  "0aa83edb8946b9",
  "12d9e497e9969e",
  "17454a47ae75c7",
  "13e97a338f6345",
  "061188b519cb7d",
  "14e6aef0a71913",
  "090916fba02d87",
  "181c823156b780",
  "14122a41d79b80",
  "154ae2181e4b68",
  "0665132514fd4a",
  "1770423d03421c",
  "02858b14aea9ce",
  "1bd65815d2d6ab",
  "08bc1f50ee610b",
  "1755f3fbc1d2ad",
  "045f87a2247437",
  "18d8353f9ff62f",
  "11bf4e72752204",
  "11d4678f66c376",
  "06fce2062c2729",
  "06858c20f2846b",
  "1e9b25f3b0cca8",
  "08d5986d5e6e16",
  "0e9a47979534bd",
  "05baa2e8372fc8",
  "02b3d0b61a5259",
  "1f578c5d3c683c",
  "15fb45ab7ed4c3",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "007888065a6c69",
  "06c73ebcdb5069",
  "01a1135ee6cf2b",
  "00b53c1106797d",
  "0dc4376245f7bf",
  "1810d100e4271f",
  "0e9499b5b91522",
  "058ba98fa64a0a",
  "03ed3055bd69da",
  "1a2b8aac9c3ef8",
  "1dd70561586fa4",
  "1b541a7d59e78e",
  "00b93b041718a4",
  "0b5d3ed6f0d1d1",
  "149d099e1c262c",
  "17500a349f7a3a",
  "1f80c240c45dd1",
  "020c617b35f3e4",
  "1a039368e3118f",
  "01853d8730a2a8",
  "13bdf7c0282b83",
  "0b680b530d1eeb",
  "1b0318d7fb2ddb",
  "1329a68ee47e20",
  "19050ddac067e8",
  "07f28b853f2a63",
  "1b039ad306b80b",
  "16d6a050cd70c1",
  "040d4b7ffccad1",
  "0baf840a2125a4",
  "14d46415d485c7",
  "1cd3f50db37cac",
  "130f6713f6378a",
  "0278a232db0179",
  "0d340ae7e13cf8",
  "04e34b322fcdc8",
  "183eb632dc3ae6",
  "1917eccdfc21b4",
  "03c7b20faf83a2",
  "16e5313b916fe5",
  "04dca5b4b5fe56",
  "0ea864126b6632",
  "1a2f30cc80d9a4",
  "011b14a11f8f09",
  "19da289b2d6af0",
  "00792e6246865b",
  "0e5e6ad1063b88",
  "02db0bbcb98265",
  "15a8bdd309dc4c",
  "1ec6c1e40eec37",
  "1a62e792c82137",
  "1390b2d2577d57",
  "0bec616d8cc43d",
  "1dc2d85d958bee",
  "0d262472bd806c",
  "14ca620d581ef1",
  "138bbe51c6943d",
  "0fdee46b423b4f",
  "19b600530cf10b",
  "04214d18925180",
  "1ca3b15de2ddca",
  "1821e031fb255d",
  "1d4a69ccb71c57",
  "0bbb44f762a161",
  "06dde8605db79c",
  "01d4a35a6aecef",
  "11fe4f7ab6cb65",
  "125850fe1a060c",
  "1771cbfaa944e8",
  "1fca25ae88f698",
  "05947fad50d291",
  "1dec5c9732c074",
  "010f403d8f12d4",
  "0a6e01c71a5977",
  "15664ae31bef0a",
  "0199bfbf94af92",
  "18f4c8501534bc",
  "1da0e88e7de129",
  "125817019bbc62",
  "0f353fd65b2946",
  "1bb442bd5ec99b",
  "1f424042126cb7",
  "00a9cb400c1dbc",
  "109acc1357600d",
  "055cd54be56e13",
  "07796e8f46a69d",
  "0046d93e3102b7",
  "1c2d2d22c654b8",
  "1e0cacd376c5c0",
  "15dcde19c7b1e5",
  "001b31bdcd294e",
  "016926a2b77025",
  "046c23dcba92bf",
  "12247dadb7c574",
  "1274ce9edf0115",
  "085969cb262676",
  "0753c53356268b",
  "0bbdcf6fe802cb",
  "003b3f3fe50f23",
  "155f371315febc",
  "18ba945881dc27",
  "1f98cc1d9af9ac",
  "1021fef761c50b",
  "0c1f838c480d1c",
  "068401ffc74f9d",
  "022800e1473e70",
  "17fcb9f691c86c",
  "16e4c35827e8c9",
  "14731d57637ccd",
  "0ce3582f8994b3",
  "0ab58ef18b7c4e",
  "0fa5478dc7897f",
  "0d3ab85ca9969c",
  "123838d86c4d26",
  "03e3630574a307",
  "0c93535c5b9400",
  "11debe6f1b32ad",
  "179a95540735ca",
  "010990da31093a",
  "157200ce6f6780",
  "19bb7cfd8168e8",
  "136d42e506ae40",
  "0acf607cc1fc53",
  "1335a1b05708b5",
  "120616b63e336a",
  "178beca3a4184e",
  "1aa3393b71df4d",
  "0f8d10b7a44573",
  "015193dd737374",
  "071b239363979b",
  "0b6f992e6aea5a",
  "16e07649fd1149",
  "064b7d788b06d5",
  "1a838491af9f37",
  "0b700aa3cc950d",
  "1832573acb5e3a",
  "084811fd340662",
  "0dc7bf0a11d1e5",
  "17bb26617e053b",
  "015bbae1e2337b",
  "1e72911d4d72d0",
  "1f0aa815690a2b",
  "0a1664372d5768",
  "186db3586d445a",
  "1c21a4d340ce39",
  "1d6aaf77838e61",
  "037f731d280bd0",
  "13c1333272690c",
  "01cfee41978ddc",
  "148428b1731bc1",
  "10ad40938f5cd8",
  "08f74562c2ee51",
  "14fcf137b96c23",
  "021dc50f2f17ff",
  "028323e5db241f",
  "105b37c5c204e7",
  "058d51fff47b95",
  "0343cd08c5d803",
  "152e6328b17dc0",
  "0de8e431b03d92",
  "03f0ec694cd5c1",
  "08b97128e8b210",
  "1a2192ec0a64ae",
  "1440fbb9f9c233",
  "14089fea381d60",
  "1f7816edc3ee97",
  "09a02496491520",
  "187a3ec181daf1",
  "0dddddc1d39ce6",
  "1a04d834f0e6ed",
  "13db925ad9da0f",
  "0a45dc5319fffc",
  "0e4759bbb098f1",
  "183f70d7f90548",
  "1525210d740287",
  "04c3b83a2316d8",
  "014f05b41ecba8",
  "090916fba02d87",
  "181c823156b780",
  "14122a41d79b80",
  "1229b14222f521",
  "0665132514fd4a",
  "1770423d03421c",
  "061ab868940f61",
  "0b4cfdeafb1ff8",
  "08bc1f50ee610b",
  "11132931fab464",
  "045f87a2247437",
  "1fa30fb0fbfc73",
  "185b946d6667c8",
  "0615b948a32d94",
  "12844383ec6bf5",
  "1cc5a53bfcdc4f",
  "143068eb937523",
  "01463050f59899",
  "0e9a47979534bd",
  "1adcf867317c89",
  "10f616f4b24191",
  "15036935e921ad",
  "1b4aa20df8f4fc",
]
`;
